# cw-on-chain-registry

./: .gitignore  Cargo.toml  README.md
contracts/on-chain-registry/: Cargo.toml
contracts/on-chain-registry/examples/: schema.rs
contracts/on-chain-registry/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/on-chain-registry/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs  tests.rs  validating.rs
