[package]
name = "on-chain-registry"
version = "0.0.1"
authors = ["Serge Nedashkovsky <snedashkovsky@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
cosmwasm-std = { version = "1.2.7",  features = ["iterator", "abort"] }
cw-storage-plus = { version = "1.1.0" }
cw2 = { version = "1.1.0" }
schemars = "0.8.12"
serde = { version = "1.0.167", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.43" }
cid = { version = "0.10.1" }

[dev-dependencies]
cosmwasm-schema = "1.2.7"
cw-multi-test = "0.16.5"
